--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -33,13 +33,14 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=\u897f\u9752\u533a\u52a0\u5f3a\u7763\u67e5\u5de5\u4f5c\u4fe1\u606f\u5316\u5efa\u8bbe\u7cfb\u7edf
+productName=\u5e02\u59d4\u7ec4\u7ec7\u90e8\u5e72\u90e8\u6863\u6848\u7ba1\u7406\u7cfb\u7edf
 version=V1.0.0
-indexFooter=\u4e2d\u5171\u5929\u6d25\u5e02\u897f\u9752\u533a\u59d4\u7763\u67e5\u529e\u516c\u5ba4\u3000\u5929\u6d25\u5e02\u5929\u623f\u79d1\u6280\u53d1\u5c55\u80a1\u4efd\u6709\u9650\u516c\u53f8\u3000\u8054\u5408\u5f00\u53d1
-loginFooter_line1=\u4e2d\u5171\u5929\u6d25\u5e02\u897f\u9752\u533a\u59d4\u7763\u67e5\u529e\u516c\u5ba4\u3000\u3000\u3000\u7814\u3000\u3000\u53d1
+indexFooter=\u5929\u6d25\u5e02\u59d4\u7ec4\u7ec7\u90e8\u6863\u6848\u5904\u3000\u5929\u6d25\u5e02\u5929\u623f\u79d1\u6280\u53d1\u5c55\u80a1\u4efd\u6709\u9650\u516c\u53f8\u3000\u8054\u5408\u5f00\u53d1
+loginFooter_line1=\u5929\u6d25\u5e02\u59d4\u7ec4\u7ec7\u90e8\u6863\u6848\u5904\u3000\u3000\u3000\u7814\u3000\u3000\u53d1
 #loginFooter_line2=\u4e2d\u5171\u6d77\u5357\u7701\u59d4\u7ec4\u7ec7\u90e8\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u5b9a\u3000\u3000\u5236
 loginFooter_line3=\u5929\u6d25\u5e02\u5929\u623f\u79d1\u6280\u53d1\u5c55\u80a1\u4efd\u6709\u9650\u516c\u53f8\u3000\u3000\u6280\u672f\u652f\u6301
 loginFooter_line4=\u8054\u7cfb\u7535\u8bdd\uff1a4007812380\u3000\u5730\u5740\uff1a\u5929\u6d25\u5e02\u5357\u5f00\u533a\u5357\u9a6c\u8def1241\u53f7\u5929\u623f\u79d1\u6280\u5927\u53a6\u3000\u8ba1\u7b97\u673a\u8f6f\u4ef6\u8457\u4f5c\u6743\u767b\u8bb0\u53f7\uff1a2011SR034244
+loginHeaderSystem=\u5e02\u59d4\u7ec4\u7ec7\u90e8\u5e72\u90e8\u6863\u6848\u7ba1\u7406\u7cfb\u7edf
 
 #\u6f14\u793a\u6a21\u5f0f: \u4e0d\u80fd\u64cd\u4f5c\u548c\u4fdd\u5b58\u7684\u6a21\u5757\uff1a sys: area/office/user/role/menu/dict, cms: site/category
 demoMode=false
