--- a/pom.xml
+++ b/pom.xml
@@ -499,7 +499,7 @@
   		<dependency>
 		  <groupId>com.tf</groupId>
 		  <artifactId>permission-client</artifactId>
-		  <version>1.4.6</version>
+		  <version>1.4.6-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
