--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,10 +33,10 @@ permissionClient.unauthorizedUrl=/unauthorized
 #\u914d\u7f6e\u9759\u6001\u8d44\u6e90,\u4e0d\u9700\u8981\u6743\u9650\u7cfb\u7edf\u7ba1\u63a7\u7684\u5730\u5740\u53ef\u4ee5\u914d\u7f6e\u5728\u6b64
 permissionClient.anonConfigStr=/emailSendController/send,/refund/receiveTongyeRefundApply,/test/**,/static/**
 
-#session\u8d85\u65f6\u65f6\u95f4\u6beb\u79d2
-permissionClient.sessionTimeout=1800000
-#cookie\u6700\u5927\u65f6\u95f4\u6beb\u79d2
-permissionClient.cookieMaxAge=1800000
+#session\u8d85\u65f6\u65f6\u95f4\u6beb\u79d2 24H
+permissionClient.sessionTimeout=864000000
+#cookie\u6700\u5927\u65f6\u95f4\u6beb\u79d2 24H
+permissionClient.cookieMaxAge=864000000
 permissionClient.login.ajaxLogin=/ajaxLogin
 permissionClient.login.needAjaxLogin=1
 permissionClient.login.notInAjaxUrl=/index
