--- a/pom.xml
+++ b/pom.xml
@@ -663,7 +663,7 @@
             </plugin>
 
             <plugin>
-                <groupId>org.eclipse.jetty</groupId>
+                <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.10.v20150310</version>
 
