--- a/pom.xml
+++ b/pom.xml
@@ -567,6 +567,15 @@
 			<version>${logback.version}</version>
 		</dependency>
        	<!-- permission client  end-->
+       	
+       	<dependency>
+        　　<groupId>jdk.tools</groupId>
+        　　<artifactId>jdk.tools</artifactId>
+        　　<version>1.8</version>
+        　　<scope>system</scope>
+        　　<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+        </dependency>
+
     </dependencies>
     <build>
         <!-- <outputDirectory>${project.basedir}/target/classes/</outputDirectory> -->
@@ -582,7 +591,6 @@
                     <!-- <compilerArguments>
 						<extdirs>src\main\webapp\WEB-INF\lib</extdirs>指定外部lib
 					</compilerArguments> -->
-					<systemPath>${java.home}/../lib/tools.jar</systemPath>
                 </configuration>
             </plugin>
 
