--- a/pom.xml
+++ b/pom.xml
@@ -586,6 +586,7 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<executable>${JAVA_HOME}/bin/javac</executable>
 					<!-- <compilerArguments> <extdirs>src\main\webapp\WEB-INF\lib</extdirs>指定外部lib 
 						</compilerArguments> -->
 				</configuration>
