--- a/pom.xml
+++ b/pom.xml
@@ -586,6 +586,7 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<fork>true</fork>
 					<executable>C:\Program Files\Java\jdk1.8.0_45\bin\javac.exe</executable>
 					<!-- 指定外部lib -->
 					<compilerArguments>
